# stupidisco

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PROMPT_ANDROID.md  README.en.md  README.md  icon.icns  pyproject.toml  requirements.txt  stupidisco.py  stupidisco.spec  test_stupidisco.py
.github/workflows/: release.yml  test.yml
input/: stupidisco-prompt.txt  stupidisco.txt  target.txt
